Commands, CommandHandlers, Updated Course Repository, Cleaned up IoC Container

--- a/CleanArch/CleanArch.Domain/CleanArch.Domain.csproj
+++ b/CleanArch/CleanArch.Domain/CleanArch.Domain.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CleanArch.Domain.Core\CleanArch.Domain.Core.csproj" />
+  </ItemGroup>
+
 </Project>
